syntax = "proto3";

package isoboot.controller.v1;

option go_package = "github.com/isoboot/isoboot/api/controllerpb";

// ControllerService handles provision lifecycle and template management
service ControllerService {
  // GetPendingBoot returns boot info for a MAC with pending provision
  rpc GetPendingBoot(GetPendingBootRequest) returns (GetPendingBootResponse);

  // MarkBootStarted marks a provision as InProgress
  rpc MarkBootStarted(MarkBootStartedRequest) returns (MarkBootStartedResponse);

  // MarkBootCompleted marks a provision as Complete
  rpc MarkBootCompleted(MarkBootCompletedRequest) returns (MarkBootCompletedResponse);

  // GetConfigMapValue retrieves a value from a ConfigMap by key
  rpc GetConfigMapValue(GetConfigMapValueRequest) returns (GetConfigMapValueResponse);

  // GetBootTarget retrieves a BootTarget by name
  rpc GetBootTarget(GetBootTargetRequest) returns (GetBootTargetResponse);

  // GetResponseTemplate retrieves a ResponseTemplate by name
  rpc GetResponseTemplate(GetResponseTemplateRequest) returns (GetResponseTemplateResponse);

  // GetRenderedTemplate renders a template file for a provision
  rpc GetRenderedTemplate(GetRenderedTemplateRequest) returns (GetRenderedTemplateResponse);
}

message GetPendingBootRequest {
  string mac = 1;
}

message GetPendingBootResponse {
  bool found = 1;
  string machine_name = 2;
  string provision_name = 3;
  string target = 4;
}

message MarkBootStartedRequest {
  string mac = 1;
}

message MarkBootStartedResponse {
  bool success = 1;
  string error = 2;
}

message MarkBootCompletedRequest {
  string hostname = 1;
  string ip = 2;  // IP address of the machine that sent the completion request
}

message MarkBootCompletedResponse {
  bool success = 1;
  string error = 2;
}

message GetConfigMapValueRequest {
  string configmap_name = 1;
  string key = 2;
}

message GetConfigMapValueResponse {
  bool found = 1;
  string value = 2;
}

message GetBootTargetRequest {
  string name = 1;
}

message GetBootTargetResponse {
  bool found = 1;
  string disk_image_ref = 2;
  string template = 3;
  string include_firmware_path = 4;
}

message GetResponseTemplateRequest {
  string name = 1;
}

message GetResponseTemplateResponse {
  bool found = 1;
  map<string, string> files = 2;
}

message GetRenderedTemplateRequest {
  string provision_name = 1;
  string filename = 2;
}

message GetRenderedTemplateResponse {
  bool found = 1;
  string content = 2;
  string error = 3;
}
